normalize letter-spacing on wittliff showcase slider a bit, and a bug fix for the font resizer when screen starts small and gets larger

--- a/resources/gato-template-wittliff/css/_homepage.scss
+++ b/resources/gato-template-wittliff/css/_homepage.scss
@@ -160,7 +160,7 @@
       }
       .subtitle {
         font-size: 3.75em;
-        letter-spacing: 0.057em;
+        letter-spacing: 0.05em;
         font-weight: normal;
       }
       a {
@@ -171,7 +171,7 @@
     }
     .dates {
       font-size: 3em;
-      letter-spacing: 0.07em;
+      letter-spacing: 0.05em;
       margin-bottom: .5em;
     }
     a.bottom {
@@ -183,7 +183,7 @@
       text-decoration: none;
       font-size: 2em;
       font-weight: 500;
-      letter-spacing: 0.03em;
+      letter-spacing: 0.05em;
       margin-right: 0.7em;
       @media (max-width: $md-breakpoint) {
         font-size: 2.5em;
